--- a/第一章 概述.md
+++ b/第一章 概述.md
@@ -44,7 +44,7 @@
 
 **核心部分**：由大量网络和连接这些网络的路由器组成，是**为边缘部分提供服务**的，提供：①**连通性**②**交换**
 
-![互联网的边缘部分与核心部分](C:\Users\李帅\Desktop\计算机网络\picture\互联网的边缘部分与核心部分.png)
+![互联网的边缘部分与核心部分](picture\互联网的边缘部分与核心部分.png)
 
 ##### 1.3.1 互联网的边缘部分
 
@@ -60,7 +60,7 @@
 
 **客户**是服务**请求**方，**服务器**是服务**提供**方
 
-![cs工作方式](C:\Users\李帅\Desktop\计算机网络\picture\cs工作方式.png)
+![cs工作方式](picture\cs工作方式.png)
 
 (2) 通信特点
 
@@ -80,7 +80,7 @@
 
 (1)通信模式：两个主机都运行了对等连接(P2P软件)，他们就可以进行平等的、对等连接通信
 
-![p2p](C:\Users\李帅\Desktop\计算机网络\picture\p2p.png)
+![p2p](picture\p2p.png)
 
 (2)通信特点：对等的每一个主机既是客户又是服务器
 
@@ -104,7 +104,7 @@
 
    采用存储转发的方式。把报文划分成一个个更小的等长的数据段
 
-   <img src="C:\Users\李帅\Desktop\计算机网络\picture\分组交换.png" alt="分组交换" style="zoom:80%;" />
+   <img src="picture\分组交换.png" alt="分组交换" style="zoom:80%;" />
 
    优点：高效、灵活、迅速、可靠
 
@@ -162,17 +162,17 @@
 
    组成：(1)**发送时延：是主机或路由器发送数据帧所需要的时间**
 
-   ​				计算公式：![发送时延](C:\Users\李帅\Desktop\计算机网络\picture\发送时延.png)
+   ​				计算公式：![发送时延](picture\发送时延.png)
 
    ​			(2)**传播时延：电磁波在信道中传播一定距离所需要的时间**
 
-   ​				计算公式：![image-20210318215545743](C:\Users\李帅\AppData\Roaming\Typora\typora-user-images\image-20210318215545743.png)
+   ​				计算公式：![传播时延](picture\传播时延.png)
 
    ​			(3)处理时延：主机或路由器收到分组后处理分组所用的时间
 
    ​			(4)排队时延：分组经过路由器时，在路由器中经历输入和输出的排队等待时间
 
-   ![image-20210318220411867](C:\Users\李帅\AppData\Roaming\Typora\typora-user-images\image-20210318220411867.png)
+   ![时延的产生](picture\时延的产生.png)
 
    **总时延=发送时延+传播时延+处理时延+排队时延**
 
@@ -190,7 +190,7 @@
 
    (2) 网络利用率：全网络的信道利用率的加权平均值。信道利用率**并非越高越好**
 
-   ![image-20210318220523474](C:\Users\李帅\AppData\Roaming\Typora\typora-user-images\image-20210318220523474.png)
+   ![利用率](picture\利用率.png)
 
    D0表示网络空闲时的时延，D表示网络当前的时延。U是网络的利用率，数值在0到1之间，当网路的利用率达到其容量的1/2时，时延就要加倍
 
@@ -222,7 +222,7 @@
 
 #####  1.7.3 各协议的体系结构
 
-<img src="C:\Users\李帅\AppData\Roaming\Typora\typora-user-images\image-20210318221525786.png" alt="image-20210318221525786" style="zoom:80%;" />
+![网络协议](picture\网络协议.png)
 
 ​	(1)应用层：
 
@@ -254,7 +254,7 @@
 
 ​		在物理层上所传数据的单位是**比特**
 
-<img src="C:\Users\李帅\AppData\Roaming\Typora\typora-user-images\image-20210318222431083.png" alt="image-20210318222431083" style="zoom: 80%;" />
+![计算机网络体系结构](picture\计算机网络体系结构.png)
 
 ##### 1.7.4 实体、协议、服务和服务访问点
 
@@ -270,9 +270,9 @@
 
 ##### 1.7.5 TCP/IP体系结构
 
-![image-20210318222958078](C:\Users\李帅\AppData\Roaming\Typora\typora-user-images\image-20210318222958078.png)
+![tcp&ip](picture\tcp&ip.png)
 
-![image-20210318223029373](C:\Users\李帅\AppData\Roaming\Typora\typora-user-images\image-20210318223029373.png)
+![tcpip协议族](picture\tcpip协议族.png)
 
 TCP/IP协议可以为各式各样的应用提供服务(everything over IP)
 
